--- a/src/main/webapp/pages/ForgotPassword/ForgotPassword.html
+++ b/src/main/webapp/pages/ForgotPassword/ForgotPassword.html
@@ -1,41 +1,41 @@
-<wm-page data-ng-controller="ForgotPasswordPageController" pagetitle="Forgot Password" name="page1"> 
- <wm-content name="content1"> 
-  <wm-page-content columnwidth="12" name="page_content1"> 
-   <wm-layoutgrid name="layoutgrid1"> 
-    <wm-gridrow name="gridrow1"> 
-     <wm-gridcolumn columnwidth="12" name="gridcolumn2" horizontalalign="center"> 
-      <wm-picture name="pictureLogo" picturesource="resources/images/imagelists/CX-Logo.png" width="140px" height="71px" margin="2em unset"></wm-picture> 
-     </wm-gridcolumn> 
-    </wm-gridrow> 
-    <wm-gridrow name="gridrow5"> 
-     <wm-gridcolumn columnwidth="3" name="gridcolumn16"></wm-gridcolumn> 
-     <wm-gridcolumn columnwidth="6" name="gridcolumn14_1"> 
-      <wm-panel iconclass="wi wi-vpn-key" autoclose="outsideClick" name="panel1" title="Password Reset"> 
-       <wm-layoutgrid name="layoutgrid2"> 
-        <wm-gridrow name="gridrow6" padding="unset unset 2em unset"> 
-         <wm-gridcolumn columnwidth="12" name="gridcolumn17"> 
-          <wm-label padding="unset 0.5em" name="label2" caption="Forgot your password? It happens! Provide your email address below and we will send you a link to set a new password so that you can get back into your account."></wm-label> 
-         </wm-gridcolumn> 
-        </wm-gridrow> 
-        <wm-gridrow name="gridrow7" padding="unset 0.5em"> 
-         <wm-gridcolumn columnwidth="8" name="gridcolumn19"> 
-          <wm-text name="Email" type="email" required="true" placeholder="Enter your Username (Email Address)" margin="0.5em 0.5em 0.5em unset"></wm-text> 
-         </wm-gridcolumn> 
-         <wm-gridcolumn columnwidth="4" name="gridcolumn20"> 
-          <wm-button class="btn-primary" caption="Reset Password" type="button" margin="0.5em unset" name="button1" on-click="Variables.getUserID.invoke()" iconclass="wi wi-update"></wm-button> 
-         </wm-gridcolumn> 
-        </wm-gridrow> 
-        <wm-gridrow name="gridrow8" padding="2em unset"> 
-         <wm-gridcolumn columnwidth="12" name="gridcolumn21" horizontalalign="center"> 
-          <wm-anchor margin="unset 0.5em" name="signup" caption="That email address does not exist in our system. Click here to create an account!" hyperlink="https://www.wavemakeronline.com/run-h70fmczdtv/CivicXpress/#/UserCreation" show="false"></wm-anchor> 
-         </wm-gridcolumn> 
-        </wm-gridrow> 
-       </wm-layoutgrid> 
-      </wm-panel> 
-     </wm-gridcolumn> 
-     <wm-gridcolumn columnwidth="3" name="gridcolumn15"></wm-gridcolumn> 
-    </wm-gridrow> 
-   </wm-layoutgrid> 
-  </wm-page-content> 
- </wm-content> 
+<wm-page data-ng-controller="ForgotPasswordPageController" pagetitle="Forgot Password" name="page1">
+    <wm-content name="content1">
+        <wm-page-content columnwidth="12" name="page_content1">
+            <wm-layoutgrid name="layoutgrid1">
+                <wm-gridrow name="gridrow1">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn2" horizontalalign="center">
+                        <wm-picture name="pictureLogo" picturesource="resources/images/imagelists/CX-Logo.png" width="140px" height="71px" margin="2em unset"></wm-picture>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow5">
+                    <wm-gridcolumn columnwidth="3" name="gridcolumn16"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn14_1">
+                        <wm-panel iconclass="wi wi-vpn-key" autoclose="outsideClick" name="panel1" title="Password Reset">
+                            <wm-layoutgrid name="layoutgrid2">
+                                <wm-gridrow name="gridrow6" padding="unset unset 2em unset">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn17">
+                                        <wm-label padding="unset 0.5em" name="label2" caption="Forgot your password? It happens! Provide your email address below and we will send you a link to set a new password so that you can get back into your account."></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow7" padding="unset 0.5em">
+                                    <wm-gridcolumn columnwidth="8" name="gridcolumn19">
+                                        <wm-text name="Email" type="email" required="true" placeholder="Enter your Username (Email Address)" margin="0.5em 0.5em 0.5em unset"></wm-text>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn20">
+                                        <wm-button class="btn-primary" caption="Reset Password" type="button" margin="0.5em unset" name="button1" on-click="Variables.getUserID.invoke()" iconclass="wi wi-update"></wm-button>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow8" padding="2em unset">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn21" horizontalalign="center">
+                                        <wm-anchor margin="unset 0.5em" name="signup" caption="That email address does not exist in our system. Click here to create an account!" hyperlink="#/UserCreation" show="false"></wm-anchor>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-panel>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="3" name="gridcolumn15"></wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
+        </wm-page-content>
+    </wm-content>
 </wm-page>
